Fixed upper bar position, all components in dark mode, docs add How to use, clean CSS

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,33 +2,12 @@
   text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.Pagination {
-  padding: 1em;
-  bottom: 0px;
-  margin: 1em;
-}
-
 .Pag-sep {
   margin-left: 1em;
 }
 
 .List {
-  padding: 3em;
+  margin-top: 111px;
 }
 
 .Entry {
@@ -46,4 +25,17 @@
 
 .NumOfEntriesInputGroup {
   width: 25em !important;
+}
+
+.Status {
+  color: lightgray;
+}
+
+.UpperBar {
+  position: fixed;
+  background: #2c3034;
+  width: 100%;
+  top: 0px;
+  overflow: hidden;
+  border-bottom: 1px solid lightgray;
 }
